# bzip2

./: CMakeLists.txt  CTestConfig.cmake  Makefile.am  Makefile.in  README.HDF  configure  configure.ac
config/cmake/: BZ2Macros.cmake  ConfigureChecks.cmake  README.txt.cmake.in  bzip2-config-version.cmake.in  bzip2-config.cmake.in  cacheinit.cmake
src/: CMakeLists.txt  Makefile.am  Makefile.in  bzlib.h
utils/: CMakeLists.txt  Makefile.am  Makefile.in
